# ice-cream-dataops

./: .gitignore  cdf.toml  pyproject.toml
.github/workflows/: deploy.prod.yaml  deploy.test.yaml  deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml  config.test.yaml
ice-cream-dataops/function_local_venvs/icapi_datapoints_extractor/: run_check.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/data_sets/: data_sets.DataSet.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: schedules.Schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/hosted_extractors/Ice Cream Factory API/: Source.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/hosted_extractors/Ice Cream Factory API/assets/: Destination.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/hosted_extractors/Ice Cream Factory API/timeseries/: Destination.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: contextualize_ts_assets.Transformation.yaml  create_asset_hierarchy.Transformation.yaml  create_asset_hierarchy.schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlowTrigger.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/data_sets/: data_sets.DataSet.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/functions/: schedules.Schedule.yaml
