[project]
name = "cdf-bootcamp-2025"
version = "0.1.0"
description = "cdf bootcamp 2025"
authors = [
    {name = "Mohammed Al-Safwan",email = "mohammed.alsafwan@cntxt.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
cognite-toolkit = "^0.6.6"
cognite-sdk = { version = "^7.81.1", extras = ["pandas"] }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
